--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -1,5 +1,5 @@
 baseURL = https://www.truthscreen.com/
 username = qa.team@authbridge.com 
 password = Testing@123
-chromepath = /home/rohit.singh/git/repository1/truth_screen/drivers/chromedriver
+chromepath = ./drivers/chromedriver
 firefoxpath = ./drivers/geckodriver
